slyles for catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -8,21 +8,23 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo logo--catalog" href="/"><img src="img/logo.svg" width="164" height="36" alt="DEVICE"></a>
+      <a class="logo" href="index.html"><img src="img/logo.svg" width="164" height="36" alt="DEVICE"></a>
       <nav class="menu">
         <form class="menu__search" method="get" action="https://echo.htmlacademy.ru">
-          <label for="search">Поиск</label>
-          <input type="search" id="search" name="search" placeholder="Поиск по сайту">
+          <label class="visually-hidden" for="search">Поиск</label>
+          <input class="search__input" type="search" id="search" name="search" placeholder="Поиск по сайту">
           <button class="search__btn" type="submit">Найти</button>
         </form>
         <ul class="menu__user">
-          <li><a class="menu__user--profile" href="#">Валентин Петухов</a></li>
-          <li><a class="menu__user--exit" href="#">Выйти</a></li>
-          <li><a class="menu__user--compare" href="#">Сравнить</a></li>
-          <li><a class="menu__user--cart" href="#">Корзина</a></li>
+          <li class="menu__user--profile">
+            <a href="#">Валентин Петухов</a>
+            <a class="menu__user--exit" href="#">Выйти</a>
+          </li>
+          <li class="menu__user--compare"><a href="#">Сравнить</a></li>
+          <li class="menu__user--cart"><a href="#">Корзина</a></li>
         </ul>
         <ul class="menu__site">
-          <li><a href="#">Каталог товаров</a>
+          <li class="menu__site-item"><a href="#">Каталог товаров</a>
             <ul class="menu__catalog">
               <li><a href="#">Виртуальная реальность</a></li>
               <li><a href="#">Моноподы для селфи</a></li>
@@ -32,9 +34,9 @@
               <li><a href="#">Квадрокоптеры</a></li>
             </ul>
           </li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li class="menu__site-item"><a href="#">Доставка</a></li>
+          <li class="menu__site-item"><a href="#">Гарантия</a></li>
+          <li class="menu__site-item"><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -51,8 +53,10 @@
           <fieldset class="filter__field">
             <legend class="filter__title">Стоимость</legend>
             <div class="filter__range">
-              <span class="filter__range--min">от 0</span>
-              <span class="filter__range--max">до 5000</span>
+              <div class="filter__bar">
+                <div class="filter__toggle filter__toggle--min"><span>от 0</span></div>
+                <div class="filter__toggle filter__toggle--max"><span>до 5000</span></div>
+              </div>
             </div>
           </fieldset>
           <fieldset class="filter__field">
@@ -100,16 +104,24 @@
         <h2 class="visually-hidden">Список товаров</h2>
         <nav class="sort">
           <h3>Сортировка:</h3>
-          <ul>
+          <ul class="sort__list">
             <li class="sort__item sort__item--current"><a href="#">По цене</a></li>
             <li class="sort__item"><a href="#">По типу</a></li>
             <li class="sort__item"><a href="#">По популярности</a></li>
-            <li class="sort__item sort__updown sort__updown--up"><a href="#">Поубыванию</a></li>
-            <li class="sort__item sort__updown sort__updown--down sort__item--current"><a href="#">Повозрастанию</a></li>
+            <li class="sort__item sort__updown sort__updown--up">
+              <a href="#">
+                <span class="visually-hidden">Поубыванию</span>
+              </a>
+            </li>
+            <li class="sort__item sort__updown sort__updown--down sort__item--current">
+              <a href="#">
+                <span class="visually-hidden">Повозрастанию</span>
+              </a>
+            </li>
           </ul>
         </nav>
         <ul class="catalog__list">
-          <li class="catalog__item">
+          <li class="catalog__item" tabindex="0">
             <h3><a class="catalog__item-link">Любительская селфи-палка</a></h3>
             <img class="catalog__img" src="img/item1.jpg" width="360" height="380" alt="Любительская селфи-палка">
             <span class="catalog__price">500 руб.</span>
@@ -118,16 +130,16 @@
               <a class="catalog__compare" href="#">Добавить к сравнению</a>
             </div>
           </li>
-          <li class="catalog__item">
-            <h3><a class="catalog__item-link">Профессиональная селфи-палка</a></h3>
-            <img class="catalog__img" src="img/item2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+          <li class="catalog__item" tabindex="0">
+            <h3><a class="catalog__item-link">Профессиональная<br>селфи-палка</a></h3>
+            <img class="catalog__img" src="img/item2.jpg" width="360" height="380" alt="Профессиональнаяселфи-палка">
             <span class="catalog__price">1500 руб.</span>
             <div class="catalog__actions">
               <a class="btn catalog__card" href="#">В корзину</a>
               <a class="catalog__compare" href="#">Добавить к сравнению</a>
             </div>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item" tabindex="0">
             <h3><a class="catalog__item-link">Непотопляемая селфи-палка</a></h3>
             <img class="catalog__img" src="img/item3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             <span class="catalog__price">2500 руб.</span>
@@ -136,7 +148,7 @@
               <a class="catalog__compare" href="#">Добавить к сравнению</a>
             </div>
           </li>
-          <li class="catalog__item catalog__item--new">
+          <li class="catalog__item catalog__item--new" tabindex="0">
             <h3><a class="catalog__item-link">Селфи-палка «Следуй за мной»</a></h3>
             <img class="catalog__img" src="img/item4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             <span class="catalog__price">4900 руб.</span>
@@ -157,12 +169,23 @@
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
-        <a class="logo logo--main logo--footer" href="/"><img src="img/logo-footer.svg" width="164" height="36" alt="DEVICE"></a>
+        <a class="logo logo--footer" href="/index.html"><img src="img/logo-footer.svg" width="164" height="36" alt="DEVICE"></a>
         <ul class="footer__user">
-          <li><a class="footer__user--profile" href="#">Валентин Петухов</a></li>
-          <li><a class="footer__user--exit" href="#">Выйти</a></li>
-          <li><a class="footer__user--compare" href="#">Сравнить</a></li>
-          <li><a class="footer__user--cart" href="#">Корзина</a></li>
+          <li>
+            <a class="footer__user-link footer__user--singin" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12" viewBox="0 0 13 12"><path fill="#272525" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z"/></svg>
+              Валентин Петухов
+            </a>
+            <a class="footer__user-link footer__user--exit" href="#">Выйти</a>
+          </li>
+          <li><a class="footer__user-link footer__user--compare" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z"/></svg>
+            Сравнить
+          </a></li>
+          <li><a class="footer__user-link footer__user--cart" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z"/><path d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z"/></svg>
+            Корзина
+          </a></li>
         </ul>
         <span class="footer__adress">г. Москва, ул. Строителей, 15</span>
         <ul class="footer__menu">
@@ -172,11 +195,11 @@
         </ul>
         <span class="footer__phone">Тел.: +7 (495) 495-95-95</span>
         <ul class="footer__social">
-          <li><a class="footer__social--fb" href="#">Facebook</a></li>
-          <li><a class="footer__social--inst" href="#">Instagram</a></li>
-          <li><a class="footer__social--tw" href="#">Twitter</a></li>
+          <li><a class="footer__social--fb" href="#"><span class="visually-hidden"Facebook</span></a></li>
+          <li><a class="footer__social--inst" href="#"><span class="visually-hidden"Instagram</span></a></li>
+          <li><a class="footer__social--tw" href="#"><span class="visually-hidden"Twitter</span></a></li>
         </ul>
-        <a class="footer_copiright" href="https://htmlacademy.ru/intensive/htmlcss">HTMLacademy</a>
+        <a class="footer_copiright" href="https://htmlacademy.ru/intensive/htmlcss"><span class="visually-hidden">HTMLacademy</span></a>
       </div>
     </footer>
   </body>
