--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo logo--main" href="/"><img src="img/logo.svg" width="164" height="36" alt="DEVICE"></a>
+      <a class="logo logo--main" href="index.html"><img src="img/logo.svg" width="164" height="36" alt="DEVICE"></a>
       <nav class="menu">
         <form class="menu__search" method="get" action="https://echo.htmlacademy.ru">
           <label class="visually-hidden" for="search">Поиск</label>
@@ -16,12 +16,12 @@
           <button class="search__btn" type="submit">Найти</button>
         </form>
         <ul class="menu__user">
-          <li><a class="menu__user--singin" href="#">Войти</a></li>
-          <li><a class="menu__user--compare" href="#">Сравнить</a></li>
-          <li><a class="menu__user--cart" href="#">Корзина</a></li>
+          <li class="menu__user--singin"><a href="#">Войти</a></li>
+          <li class="menu__user--compare"><a href="#">Сравнить</a></li>
+          <li class="menu__user--cart"><a href="#">Корзина</a></li>
         </ul>
         <ul class="menu__site">
-          <li class="menu__site-item"><a href="#">Каталог товаров</a>
+          <li class="menu__site-item"><a href="catalog.html">Каталог товаров</a>
             <ul class="menu__catalog">
               <li><a href="#">Виртуальная реальность</a></li>
               <li><a href="#">Моноподы для селфи</a></li>
@@ -176,7 +176,7 @@
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
-        <a class="logo logo--main logo--footer" href="/"><img src="img/logo-footer.svg" width="164" height="36" alt="DEVICE"></a>
+        <a class="logo logo--main logo--footer" href="/index.html"><img src="img/logo-footer.svg" width="164" height="36" alt="DEVICE"></a>
         <ul class="footer__user">
           <li><a class="footer__user-link footer__user--singin" href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12" viewBox="0 0 13 12"><path fill="#272525" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z"/></svg>
