--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo" href="index.html"><img src="img/logo.svg" width="164" height="36" alt="DEVICE"></a>
+      <a class="logo" href="index.html">
+        <img src="img/logo.svg" width="164" height="36" alt="DEVICE">
+      </a>
       <nav class="menu">
         <form class="menu__search" method="get" action="https://echo.htmlacademy.ru">
           <label class="visually-hidden" for="search">Поиск</label>
