--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo logo--main" href="index.html"><img src="img/logo.svg" width="164" height="36" alt="DEVICE"></a>
+      <a class="logo logo--main" href="index.html">
+        <img src="img/logo.svg" width="164" height="36" alt="DEVICE">
+      </a>
       <nav class="menu">
         <form class="menu__search" method="get" action="https://echo.htmlacademy.ru">
           <label class="visually-hidden" for="search">Поиск</label>
@@ -16,12 +18,19 @@
           <button class="search__btn" type="submit">Найти</button>
         </form>
         <ul class="menu__user">
-          <li class="menu__user--singin"><a href="#">Войти</a></li>
-          <li class="menu__user--compare"><a href="#">Сравнить</a></li>
-          <li class="menu__user--cart"><a href="#">Корзина</a></li>
+          <li class="menu__user--singin">
+            <a href="#">Войти</a>
+          </li>
+          <li class="menu__user--compare">
+            <a href="#">Сравнить</a>
+          </li>
+          <li class="menu__user--cart">
+            <a href="#">Корзина</a>
+          </li>
         </ul>
         <ul class="menu__site">
-          <li class="menu__site-item"><a href="catalog.html">Каталог товаров</a>
+          <li class="menu__site-item">
+            <a href="catalog.html">Каталог товаров</a>
             <ul class="menu__catalog">
               <li><a href="#">Виртуальная реальность</a></li>
               <li><a href="#">Моноподы для селфи</a></li>
@@ -31,9 +40,15 @@
               <li><a href="#">Квадрокоптеры</a></li>
             </ul>
           </li>
-          <li class="menu__site-item"><a href="#">Доставка</a></li>
-          <li class="menu__site-item"><a href="#">Гарантия</a></li>
-          <li class="menu__site-item"><a href="#">Контакты</a></li>
+          <li class="menu__site-item">
+            <a href="#">Доставка</a>
+          </li>
+          <li class="menu__site-item">
+            <a href="#">Гарантия</a>
+          </li>
+          <li class="menu__site-item">
+            <a href="#">Контакты</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -43,13 +58,19 @@
         <h2 class="visually-hidden">Популярные товары</h2>
         <ul class="slider__switches">
           <li>
-            <button class="slider__radio slider__radio-1 slider__radio--active"><span class="visually-hidden">Первый слайд</span></button>
+            <button class="slider__radio slider__radio-1 slider__radio--active">
+              <span class="visually-hidden">Первый слайд</span>
+            </button>
           </li>
           <li>
-            <button class="slider__radio slider__radio-2"><span class="visually-hidden">Второй слайд</span></button>
+            <button class="slider__radio slider__radio-2">
+              <span class="visually-hidden">Второй слайд</span>
+            </button>
           </li>
           <li>
-            <button class="slider__radio slider__radio-3"><span class="visually-hidden">Третий слайд</span></button>
+            <button class="slider__radio slider__radio-3">
+              <span class="visually-hidden">Третий слайд</span>
+            </button>
           </li>
         </ul>
         <article class="slide slide-1">
@@ -148,10 +169,26 @@
       </section>
       <section class="brands">
         <ul class="brands__list">
-          <li><a class="brands__link" href="#"><img src="img/logo1.jpg" width="260" height="100" alt="DJI"></a></li>
-          <li><a class="brands__link" href="#"><img src="img/logo2.jpg" width="260" height="100" alt="SPGadgets"></a></li>
-          <li><a class="brands__link" href="#"><img src="img/logo3.jpg" width="260" height="100" alt="GoPro"></a></li>
-          <li><a class="brands__link" href="#"><img src="img/logo4.jpg" width="260" height="100" alt="VIVE"></a></li>
+          <li>
+            <a class="brands__link" href="#">
+              <img src="img/logo1.jpg" width="260" height="100" alt="DJI">
+            </a>
+          </li>
+          <li>
+            <a class="brands__link" href="#">
+              <img src="img/logo2.jpg" width="260" height="100" alt="SPGadgets">
+            </a>
+          </li>
+          <li>
+            <a class="brands__link" href="#">
+              <img src="img/logo3.jpg" width="260" height="100" alt="GoPro">
+            </a>
+          </li>
+          <li>
+            <a class="brands__link" href="#">
+              <img src="img/logo4.jpg" width="260" height="100" alt="VIVE">
+            </a>
+          </li>
         </ul>
       </section>
       <div class="about-contacts__wrapper">
@@ -176,20 +213,34 @@
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
-        <a class="logo logo--main logo--footer" href="/index.html"><img src="img/logo-footer.svg" width="164" height="36" alt="DEVICE"></a>
+        <a class="logo logo--main logo--footer" href="/index.html">
+          <img src="img/logo-footer.svg" width="164" height="36" alt="DEVICE">
+        </a>
         <ul class="footer__user">
-          <li><a class="footer__user-link footer__user--singin" href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12" viewBox="0 0 13 12"><path fill="#272525" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z"/></svg>
-            Войти
-          </a></li>
-          <li><a class="footer__user-link footer__user--compare" href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z"/></svg>
-            Сравнить
-          </a></li>
-          <li><a class="footer__user-link footer__user-cart" href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z"/><path d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z"/></svg>
-            Корзина
-          </a></li>
+          <li>
+            <a class="footer__user-link footer__user--singin" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12" viewBox="0 0 13 12">
+                <path fill="#272525" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z"/>
+              </svg>
+              Войти
+            </a>
+          </li>
+          <li>
+            <a class="footer__user-link footer__user--compare" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10">
+                <path d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z"/>
+              </svg>
+              Сравнить
+            </a>
+          </li>
+          <li>
+            <a class="footer__user-link footer__user-cart" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12">
+                <path d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z"/><path d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z"/>
+              </svg>
+              Корзина
+            </a>
+          </li>
         </ul>
         <span class="footer__adress">г. Москва, ул. Строителей, 15</span>
         <ul class="footer__menu">
@@ -199,9 +250,21 @@
         </ul>
         <span class="footer__phone">Тел.: +7 (495) 495-95-95</span>
         <ul class="footer__social">
-          <li><a class="footer__social--fb" href="#"><span class="visually-hidden">Facebook</span></a></li>
-          <li><a class="footer__social--inst" href="#"><span class="visually-hidden">Instagram</span></a></li>
-          <li><a class="footer__social--tw" href="#"><span class="visually-hidden">Twitter</span></a></li>
+          <li>
+            <a class="footer__social--fb" href="#">
+              <span class="visually-hidden">Facebook</span>
+            </a>
+          </li>
+          <li>
+            <a class="footer__social--inst" href="#">
+              <span class="visually-hidden">Instagram</span>
+            </a>
+          </li>
+          <li>
+            <a class="footer__social--tw" href="#">
+              <span class="visually-hidden">Twitter</span>
+            </a>
+          </li>
         </ul>
         <a class="footer_copiright" href="https://htmlacademy.ru/intensive/htmlcss"><span class="visually-hidden">HTMLacademy</span></a>
       </div>
@@ -223,12 +286,13 @@
         </p>
         <button class="btn write-us__btn" type="submit">Отправить</button>
       </form>
-      <button class="modal__close" type="button">Закрыть</button>
+      <button class="modal__close modal__close--write-us" type="button">Закрыть</button>
     </section>
     <section class="modal modal--map">
       <h2 class="visually-hidden">Наш адрес</h2>
-      <button class="modal__close" type="button">Закрыть</button>
-      <img class="modal__map-img" src="img/map-modal.jpg" width="960" height="559" alt="Наш адрес г. Москва, ул. Строителей, 15">
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBB4J2cQgD" width="960" height="559" frameborder="1" allowfullscreen="true"></iframe>
+      <p><img class="modal__map-img" src="img/map-modal.jpg" width="960" height="559" alt="Наш адрес г. Москва, ул. Строителей, 15"></p>
+      <button class="modal__close modal__close--map" type="button">Закрыть</button>
     </section>
     <script src="js/script.js"></script>
   </body>
